actix-web-codegen/tests/trybuild/route-missing-method-fail.stderr
error: The #[route(..)] macro requires at least one `method` attribute
 --> $DIR/route-missing-method-fail.rs:3:1
  |
3 | #[route("/")]
  | ^^^^^^^^^^^^^
  |
  = note: this error originates in an attribute macro (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `fn() -> impl std::future::Future {index}: HttpServiceFactory` is not satisfied
  --> $DIR/route-missing-method-fail.rs:12:55
   |
12 |     let srv = actix_test::start(|| App::new().service(index));
   |                                                       ^^^^^ the trait `HttpServiceFactory` is not implemented for `fn() -> impl std::future::Future {index}`
